--- a/commentonit/templates/layout.html
+++ b/commentonit/templates/layout.html
@@ -42,9 +42,9 @@
     <div id="top-inner">
       <div id="top-bar">
         <py:choose>
-        <py:when test="c.user">
+        <py:when test="False">
         <p>
-          Logged in as <strong>${c.user}</strong> 
+          Logged in as <strong>${}</strong> 
           | <a href="/account/logout/">Logout</a>
         </p>
         </py:when>
