--- a/commentonit/templates/annotate.html
+++ b/commentonit/templates/annotate.html
@@ -7,6 +7,13 @@
 
   <div py:match="content">
     ${h.HTML(c.content)}
+
+    <script>
+        jQuery(function() {
+          $('pre').annotator();
+          $('pre').annotationStore();
+        });
+    </script>
 	</div>
 
   <xi:include href="layout.html" />
