--- a/commentonit/templates/index.html
+++ b/commentonit/templates/index.html
@@ -12,12 +12,13 @@
       ${h.file(name='file', size=30)}
       -->
 
-      <label>Enter some text (plain):</label>
+      <label>Enter some text (you can use <a
+          href="http://daringfireball.net/projects/markdown/">markdown</a>)):</label>
       ${h.textarea(name='text', cols=80, rows=10)}
 
       <br />
       <br />
-      ${h.submit('Go', 'Go')}
+      ${h.submit('Go &raquo;', 'Go')}
     </form>
 	</div>
 
