--- a/commentonit/templates/layout.html
+++ b/commentonit/templates/layout.html
@@ -12,6 +12,9 @@
   <link rel="stylesheet" href="/css/extra.css" type="text/css" media="screen, print" title="Master stylesheet" charset="utf-8" />
   <link rel="shortcut icon" href="http://m.okfn.org/gfx/logo/favicon.ico" type="image/x-icon" />
 
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="http://m.okfn.org/kforge/scripts/kforge.js"></script>
+
   <py:if test="defined('page_specific_css')">
     ${page_specific_css()}
   </py:if>
