[misc][s]: various minor fixes to model, setup.py etc to get things functional (last commit was done w/o testing).

--- a/commentonit/templates/index.html
+++ b/commentonit/templates/index.html
@@ -13,7 +13,7 @@
       -->
 
       <label>Enter some text (you can use <a
-          href="http://daringfireball.net/projects/markdown/">markdown</a>)):</label>
+          href="http://daringfireball.net/projects/markdown/">markdown</a>):</label>
       ${h.textarea(name='text', cols=80, rows=10)}
 
       <br />
