[show/edit,show/view,lists/index,tests][l]: implement basic view and index action for document and improve edit (esp look and feel).

--- a/_attachments/style/master.css
+++ b/_attachments/style/master.css
@@ -10,3 +10,14 @@
   line-height: 24px;
 }
 
+#content .entry-title {
+  margin-bottom: 20px;
+}
+
+form.doc-edit input, form.doc-edit textarea {
+  width: 80%;
+}
+
+textarea.doc-body {
+  height: 400px;
+}
