--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,10 @@
     {{>header}}
+    <h1>Welcome to Comment on It</h1>
+    <p>This site allows you comment on and annotate texts <strong>inline</strong>. To get started just create a document by pasting in some text and then share it with your colleagues.</p>
 
-    <h1>Recently...</h1>
+    <h2><a href="{{createPath}}">Create Document</a></h2>
+
+    <h2>Recent Changes</h2>
     <ul id="posts">
       {{#posts}}
         <li>
