--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -28,6 +28,7 @@
             <h3 class="widget-title">About</h3>
             <div class="textwidget">
               <ul>
+                <li><a href="/license/">License</a></li>
               </ul>
             </div>
           </li>
