--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -3,10 +3,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-  <title></title>
+  <title>{{blogName}}</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="shortcut icon" href="http://assets.okfn.org/gfx/logo/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="{{ assets }}/style/master.css" type="text/css">
+  <link rel="stylesheet" href="http://wordpress/wp3.0/wp-content/themes/twentyten/style.css" type="text/css">
+  <link rel="stylesheet" href="{{assets}}/vendor/annotator/annotator.css"></script>
 </head>
 
 <body>
@@ -19,6 +20,7 @@
             {{ blogName }}
         </a>
       </h1>
+      <div id="site-description">Inline, in-browser annotation of documents online</div>
     </div> <!-- /branding -->
 
     <div id="login-and-search">
