[view][l]: implement annotations in views using couchdb backend with storecouchdb plugin to annotator.
  * Lots still to fix:
    * Deletion of annotation immediately after creation fails
    * Editing of an annotation immediately after creation leads to duplicate annoations
    * Not using the uri properly to restrict annotations you view

--- a/templates/view.html
+++ b/templates/view.html
@@ -2,7 +2,7 @@
 
     <h1>{{title}} [<a href="{{editLink}}">Edit</a>]</h1>
 
-    <div class="document-body">
+    <div class="document-body annotated-text">
       {{{body}}}
     </div>
 
@@ -13,4 +13,23 @@
   {{>footer}}
 
   {{>scripts}}
+  {{>annotation-scripts}}
+  <script>
+    jQuery(function ($) {
+        var annotator_store = '';
+        $('.annotated-text').annotator()
+           .annotator('addPlugin', Annotator.Plugins.User, {one: 1, two: 2})
+           .annotator('addPlugin', Annotator.Plugins.StoreCouchdb, {
+              prefix: annotator_store,
+              // loadFromSearch: {
+              //  'uri': '{{{uri}}}'
+              //},
+              annotationData: {
+                'uri': 'myuri'
+                // 'uri': '{{{uri}}}',
+                // 'user': {'id': '{{{userid}}}'} 
+              }
+           });
+    });
+  </script>
 </html>
