[templates][s]: minor change to template variable (indexPath).

--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -18,7 +18,7 @@
   <div id="masthead">
     <div id="branding" role="banner">
       <h1 id="site-title">
-        <a href="{{ index }}" title="{{blogName}} Home">
+        <a href="{{ indexPage }}" title="{{blogName}} Home">
             {{ blogName }}
         </a>
       </h1>
@@ -36,7 +36,7 @@
   <div id="access" role="navigation">
     <div class="menu">
     <ul>
-      <li><a href="${{ index }}">Home</a></li>
+      <li><a href="{{ indexPage }}">Home</a></li>
     </ul>
     </div> <!-- .menu -->
   </div> <!-- #access -->
