[css][s]: refactor to have an explicit themes directory and move twentyten styles to local repo.

--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -6,10 +6,9 @@
   <title>{{blogName}}</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="shortcut icon" href="http://assets.okfn.org/gfx/logo/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="http://wordpress/wp3.0/wp-content/themes/twentyten/style.css" type="text/css">
   <link rel="stylesheet" href="{{assets}}/vendor/annotator/annotator.css" type="text/css"/ >
   <link rel="stylesheet" href="https://github.com/nickstenning/annotator/raw/0.8/pkg/annotator.min.css" type="text/css" />
-  <link rel="stylesheet" href="{{ assets }}/style/master.css" type="text/css">
+  <link rel="stylesheet" href="{{ assets }}/themes/commentonit/style.css" type="text/css">
 </head>
 
 <body>
